--- a/src/styles/landing/landing.less
+++ b/src/styles/landing/landing.less
@@ -1,14 +1,14 @@
 .landing-container {
-    padding: 32px 64px;
+    padding: 2rem 4rem;
     position: relative;
 }
 .landing {
     width: 100%;
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 75rem;
     display: block;
     &-card {
-        margin-bottom: 24px;
+        margin-bottom: 1.5rem;
     }
 }
 
