--- a/src/styles/landing/searchbox.less
+++ b/src/styles/landing/searchbox.less
@@ -1,36 +1,41 @@
 .searchbox-wrapper {
     width: 100%;
-    height: 252px;
+    height: 15.75rem;
     box-shadow: @shadow-medium;
-    border-radius: 12px;
+    border-radius: 1rem;
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
+    opacity: 1;
+    transition: 500ms ease-in-out;
+}
+.searchbox-hide {
+    opacity: 0;
 }
 .searchbox {
-    padding: 26px 64px;
+    padding: 1.625rem 4rem;
     &-title {
         text-align: center;
-        padding: 16px 0 20px 0;
-        font-size: 26px;
-        letter-spacing: 0.1em;
+        padding: 1rem 0 1.25rem 0;
+        font-size: 1.625rem;
+        letter-spacing: 0.1rem;
         color: @color-text-accent;
         text-shadow: 0 0 8px rgba(0,0,0, .12);
         .no-select();
     }
     &-input {
-        padding: 6px 32px 16px 32px;
+        padding: 0.375rem 2rem 1rem 2rem;
         text-align: center;
         .el-input {
-            max-width: 720px;
+            max-width: 45rem;
         }
         input {
-            font-size: 18px;
+            font-size: 1.125rem;
             background: rgba(255,255,255, 0.75);
             color: #2e2e2e;
             text-align: center;
             transition: 50ms;
-            border-radius: 32px;
+            border-radius: 2rem;
         }
         input:focus {
             outline: none;
@@ -39,16 +44,16 @@
         }
     }
     &-button {
-        padding: 6px 24px;
+        padding: 0.375rem 1.5rem;
         text-align: center;
         button {
-            width: 48px;
-            height: 48px;
+            width: 3rem;
+            height: 3rem;
             border: 1px @color-text-accent solid;
-            border-radius: 32px;
+            border-radius: 2rem;
             background: transparent;
             color: @color-text-accent;
-            font-size: 18px;
+            font-size: 1.125rem;
             transition: 75ms;
             .no-select();
         }
@@ -62,7 +67,11 @@
     }
 }
 
-@media(max-height: 768px) {
+@media(max-height: 754px) {
+    .searchbox-wrapper {
+        width: 100%;
+        height: 240px;
+    }
     .searchbox {
         padding: 22px 64px;
         &-title {
