Mod for mobile.

--- a/src/styles/landing/banner.less
+++ b/src/styles/landing/banner.less
@@ -94,6 +94,8 @@
     }
 }
 
+/* PC */
+
 @media (max-height: 768px) {
     .banner-wrapper {
         height: 704px;
@@ -129,6 +131,12 @@
     }
 }
 
+/* Mobile */
+
 @media (max-width: 768px) {
-    background: none;
+    .banner {
+        &-title {
+            font-size: 3rem;
+        }
+    }
 }
