--- a/src/styles/landing/landing.less
+++ b/src/styles/landing/landing.less
@@ -12,6 +12,17 @@
     }
 }
 
+@media(max-width: 768px) {
+    .landing-container {
+        padding: 20px;
+    }
+    .landing {
+        &-card {
+            margin-bottom: 20px;
+        }
+    }
+}
+
 /* Components */
 
 @import './banner.less';
