--- a/src/styles/landing/rank.less
+++ b/src/styles/landing/rank.less
@@ -61,3 +61,18 @@
         height: 202px;
     }
 }
+
+/* Mobile */
+
+@media (max-width: 768px) {
+    .rank {
+        span {
+            font-size: 24px;
+        }
+        &-options {
+            &-split {
+                margin: 0 28px;
+            }
+        }
+    }
+}
