--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -1,7 +1,25 @@
 body{
     margin: 0;
     background: @color-background-primary;
+    scroll-behavior: smooth;
     width: 100%;
+}
+
+@scrollbar-width: 8px;
+
+body::-webkit-scrollbar {
+    width: @scrollbar-width;
+}
+body::-webkit-scrollbar-button {
+    display: none;
+}
+body::-webkit-scrollbar-thumb {
+    width: @scrollbar-width;
+    border-radius: @scrollbar-width;
+    background: @color-primary;
+}
+body::-webkit-scrollbar-track {
+    background: @color-background-primary;
 }
 
 .no-scrollbar::-webkit-scrollbar {
