--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -4,6 +4,11 @@
 @import './basic/layout.less';
 @import './basic/shadow.less';
 
+/* Common components */
+@import './common/imagecard.less';
+@import './common/waterfall.less';
+
 /* Views */
 
 @import './landing/landing.less';
+@import './rank/rank.less';
