--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -1,8 +1,9 @@
 body{
     margin: 0;
-    background: @color-background-primary;
-    scroll-behavior: smooth;
     width: 100%;
+    scroll-behavior: smooth;
+    background: @color-background-primary;
+    font-family: MicroSoft Yahei, Heiti SC, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 @scrollbar-width: 8px;
@@ -43,4 +44,17 @@ button:focus {
     user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
+}
+
+.desktop-hide {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .mobile-hide {
+        display: none;
+    }
+    .desktop-hide {
+        display: inherit;
+    }
 }
