--- a/src/styles/landing/rankbox.less
+++ b/src/styles/landing/rankbox.less
@@ -1,4 +1,4 @@
-.rank-wrapper {
+.rankbox-wrapper {
     width: 100%;
     height: 16.375rem;
     box-shadow: @shadow-medium;
@@ -10,10 +10,10 @@
     opacity: 1;
     transition: 500ms ease-in-out;
 }
-.rank-hide {
+.rankbox-hide {
     opacity: 0;
 }
-.rank {
+.rankbox {
     margin: auto;
     span {
         text-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.15);
@@ -57,7 +57,7 @@
 }
 
 @media (max-height: 754px) {
-    .rank-wrapper {
+    .rankbox-wrapper {
         height: 202px;
     }
 }
@@ -65,7 +65,7 @@
 /* Mobile */
 
 @media (max-width: 768px) {
-    .rank {
+    .rankbox {
         span {
             font-size: 24px;
         }
