--- a/src/styles/landing/searchbox.less
+++ b/src/styles/landing/searchbox.less
@@ -49,12 +49,16 @@
         button {
             width: 3rem;
             height: 3rem;
+            margin: 0 auto;
             border: 1px @color-text-accent solid;
             border-radius: 2rem;
             background: transparent;
             color: @color-text-accent;
             font-size: 1.125rem;
             transition: 75ms;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             .no-select();
         }
         button:hover {
