FIx route & banner bg, add loading to image card

--- a/src/styles/landing/banner.less
+++ b/src/styles/landing/banner.less
@@ -8,6 +8,7 @@
     background-size: cover;
     position: relative;
     transition: 0.5s ease-in-out;
+    transition-property: max-height;
 }
 
 .banner-expanded {
