Add cache to waterfall and improve rank page

--- a/src/styles/basic/color.less
+++ b/src/styles/basic/color.less
@@ -1,4 +1,10 @@
+/* Basic */
 @color-primary: #da7a85;
 @color-accent: #f8f8f8;
+
+/* Text */
+@color-text-primary: @color-primary;
 @color-text-accent: #fafafa;
+
+/* Background */
 @color-background-primary: @color-accent;
