--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -7,6 +7,7 @@
 /* Common components */
 @import './common/imagecard.less';
 @import './common/waterfall.less';
+@import './common/back2top.less';
 
 /* Views */
 
