Fix image card & add switchers

--- a/src/styles/rank/rank.less
+++ b/src/styles/rank/rank.less
@@ -101,9 +101,17 @@
     }
 }
 
+/* Popover */
+
+.rank-category-popover {
+    border-radius: 16px;
+    padding: 18px;
+}
+
 /* Components */
 
 @import './modeswitcher.less';
+@import './dateswitcher.less';
 
 /* Mixin */
 
