--- a/src/styles/common/imagecard.less
+++ b/src/styles/common/imagecard.less
@@ -60,6 +60,7 @@
         &-icon {
             color: @color-text-primary;
             font-size: 40px;
+            margin-bottom: 12px;
         }
         &-tip {
             color: @color-text-primary;
