Add detail page

--- a/src/styles/rank/dateswitcher.less
+++ b/src/styles/rank/dateswitcher.less
@@ -3,7 +3,7 @@
         width: 100%;
         input {
             text-align: center;
-            color: @color-primary;
+            color: @color-text-primary;
             font-weight: 600;
             letter-spacing: 0.05em;
         }
