--- a/src/styles/rank/rank.less
+++ b/src/styles/rank/rank.less
@@ -22,7 +22,7 @@
     }
     &-title {
         font-size: 38px;
-        color: @color-primary;
+        color: @color-text-primary;
         letter-spacing: 0.05em;
         font-weight: 600;
         &-category {
