--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -1,6 +1,12 @@
+html {
+    width: 100%;
+    min-height: 100vh;
+}
+
 body{
     margin: 0;
     width: 100%;
+    min-height: 100vh;
     scroll-behavior: smooth;
     background: @color-background-primary;
     font-family: MicroSoft Yahei, Heiti SC, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
@@ -10,6 +16,7 @@ body{
 
 body::-webkit-scrollbar {
     width: @scrollbar-width;
+    height: @scrollbar-width;
 }
 body::-webkit-scrollbar-button {
     display: none;
@@ -37,6 +44,7 @@ button:focus {
 
 #app {
     width: 100%;
+    min-height: 100%;
     position: relative;
 }
 
