Add components to pic page

--- a/src/styles/common/imagecard.less
+++ b/src/styles/common/imagecard.less
@@ -35,6 +35,7 @@
         letter-spacing: 0.025rem;
         color: @color-text-accent;
         text-shadow: 0 0 6px rgba(0,0,0, .15);
+        text-overflow: ellipsis;
         span {
             line-height: 48px;
             font-size: 16px;
