--- a/src/styles/basic/color.less
+++ b/src/styles/basic/color.less
@@ -1,6 +1,6 @@
 /* Basic */
 @color-primary: #da7a85;
-@color-accent: #f8f8f8;
+@color-accent: #fafafa;
 
 /* Text */
 @color-text-primary: @color-primary;
