Add responsive to detail page

--- a/src/styles/pic/author.less
+++ b/src/styles/pic/author.less
@@ -26,3 +26,21 @@
         }
     }
 }
+
+/* Responsive */
+@media(max-width: 1024px) {
+    .pic-author {
+        &-title {
+            font-size: 24px;
+        }
+    }
+}
+
+/* Mobile */
+@media(max-width: 768px) {
+    .pic-author {
+        &-title {
+            font-size: 22px;
+        }
+    }
+}
