--- a/src/styles/common/imagecard.less
+++ b/src/styles/common/imagecard.less
@@ -40,6 +40,7 @@
         overflow: hidden;
         white-space: nowrap;
         line-height: 48px;
+        .no-select();
     }
     &-overlay {
         position: absolute;
