--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -180,9 +180,11 @@
         .pic-presentation-image {
             width: calc(100vw - 48px) !important;
             height: auto !important;
+            box-shadow: none;
             img {
                 width: calc(100vw - 48px) !important;
                 height: auto !important;
+                box-shadow: 0px 4px 12px rgba(0,0,0, .175);
             }
         }
         .pic-presentation-page {
