--- a/src/styles/pic/related.less
+++ b/src/styles/pic/related.less
@@ -5,6 +5,7 @@
         color: @color-primary;
         font-weight: 600;
         letter-spacing: 0.05em;
+        .no-select();
         .pic-related-paginator {
             float: right;
             margin-right: -8px;
