--- a/src/styles/landing/searchbox.less
+++ b/src/styles/landing/searchbox.less
@@ -32,10 +32,13 @@
         input {
             font-size: 1.125rem;
             background: rgba(255,255,255, 0.75);
-            color: #2e2e2e;
+            color: @color-primary;
             text-align: center;
             transition: 50ms;
             border-radius: 2rem;
+            font-size: 16px;
+            font-weight: 600;
+            letter-spacing: 0.05em;
         }
         input:focus {
             outline: none;
