--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,6 +1,7 @@
 /* Basic */
 
 @import './basic/color.less';
+@import './basic/font.less';
 @import './basic/layout.less';
 @import './basic/shadow.less';
 
