fix: mobile style of related

--- a/src/styles/pic/related.less
+++ b/src/styles/pic/related.less
@@ -39,6 +39,7 @@
 @media(max-width: 768px) {
     .pic-related {
         margin-top: 28px;
+        margin-bottom: 24px;    // 防止页面屁股着地
         &-title {
             font-size: 22px;
         }
