add: rank - mobile responsive styles

--- a/src/styles/common/imagecard.less
+++ b/src/styles/common/imagecard.less
@@ -100,3 +100,14 @@
         }
     }
 }
+
+/* Mobile */
+@media(max-width: 768px) {
+    .image-card {
+        &-title {
+            height: 42px;
+            line-height: 42px;
+            font-size: 14px;
+        }
+    }
+}
