--- a/src/styles/common/imagecard.less
+++ b/src/styles/common/imagecard.less
@@ -109,5 +109,13 @@
             line-height: 42px;
             font-size: 14px;
         }
+        &-overlay {
+            &-icon {
+                font-size: 36px;
+            }
+            &-tip {
+                font-size: 18px;
+            }
+        }
     }
 }
