update: mobile waterfall fit

--- a/src/styles/common/waterfall.less
+++ b/src/styles/common/waterfall.less
@@ -10,7 +10,7 @@
     @trigger-width: (@col + 1) * @image-card-width + @image-card-margin * 2 * (@col + 1) + 2 * @margin - 1px;
     @container-width: @col * @image-card-width + @image-card-margin * 2 * @col;
     @media(max-width: @trigger-width) {
-        .waterfall-container {
+        .waterfall-responsive {
             width: @container-width !important;
         }
     }
