--- a/src/styles/search/search.less
+++ b/src/styles/search/search.less
@@ -113,11 +113,14 @@
 
     .search-content {
         width: 100%;
-        overflow-x: hidden;
+        overflow: hidden;
         padding-top: 8px;
         .waterfall-wrapper {
             .waterfall-wrapper-mixin(6);
             .waterfall-responsive-mixin(5, 2, 72px);
+            .waterfall {
+                overflow: hidden;
+            }
         }
     }
 }
@@ -197,9 +200,6 @@
             padding: 8px 16px;
             .waterfall-wrapper {
                 width: auto !important;
-                .waterfall-container {
-                    width: auto !important;
-                }
             }
         }
     }
