update: waterfall infinite responsive

--- a/src/styles/pic/author.less
+++ b/src/styles/pic/author.less
@@ -37,6 +37,15 @@
     }
 }
 
+/* iPad / iPad Pro protrait */
+@media screen and (orientation: portrait) and (max-width: 1024px) {
+    .pic-author {
+        &-title {
+            font-size: 22px;
+        }
+    }
+}
+
 /* Mobile */
 @media(max-width: 767px) {
     .pic-author {
