--- a/src/styles/pic/related.less
+++ b/src/styles/pic/related.less
@@ -35,8 +35,19 @@
     }
 }
 
+/* iPad / iPad Pro protrait */
+@media screen and (orientation: portrait) and (max-width: 1024px) {
+    .pic-related {
+        margin-top: 28px;
+        margin-bottom: 24px;    // 防止页面屁股着地
+        &-title {
+            font-size: 22px;
+        }
+    }
+}
+
 /* Mobile */
-@media(max-width: 767px) {
+@media (max-width: 767px) {
     .pic-related {
         margin-top: 28px;
         margin-bottom: 24px;    // 防止页面屁股着地
