fix: landing styles

--- a/src/styles/landing/banner.less
+++ b/src/styles/landing/banner.less
@@ -137,6 +137,7 @@
 @media (max-width: 767px) {
     .banner-wrapper {
         height: 600px;
+        max-height: 200px;
     }
     .banner-expanded {
         max-height: 600px;
